--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
+    "i18next": "^19.3.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.3",
     "react-scripts": "^3.3.1",
     "rss-parser": "^3.7.5"
   },
