--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.3",
     "react-scripts": "^3.3.1",
-    "rss-parser": "^3.7.5"
+    "rss-parser": "^3.7.5",
+    "snoowrap": "^1.21.0"
   },
   "scripts": {
     "start": "now dev",
